syntax = "proto3";

import "auth/user_token.proto";

package refreshToken;

service RefreshTokenService {
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RefreshTokenRequest {
    userToken.User user = 1;
    string refresh_token = 2;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}
